--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,10 @@
+.idea
+.DS_Store
+target/classes
+target/generated-*
+target/maven-status
+target/surefire-reports
+target/test-classes
 # Compiled class file
 *.class
 
